--- a/styles.css
+++ b/styles.css
@@ -56,7 +56,7 @@ html, body{
   
   
   section{
-    margin: 2em;
+    margin-top: 2em;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -68,7 +68,7 @@ html, body{
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    background: url('./img/JÖAK2.png') center/cover no-repeat;
+    background: url('./img/JÖAK2.png') center/contain  no-repeat;
     color: white;
   }
 
